2011-12-12 Pierre Wieser <pwieser@trychlos.org>

	* src/io-desktop/nadp-formats.c:
	* src/io-xml/naxml-formats.c: Review the description of the export formats.

	* configure.ac:
	* src/core/na-gtk-utils.c:
	* src/core/na-importer-ask.ui:
	* src/nact/nact-add-capability-dialog.c:
	* src/nact/nact-add-capability.ui:
	* src/nact/nact-add-scheme-dialog.c:
	* src/nact/nact-add-scheme.ui:
	* src/nact/nact-assistant-export.ui:
	* src/nact/nact-clipboard.c:
	* src/nact/nact-icon-chooser.ui:
	* src/nact/nact-main-tab.c:
	* src/nact/nact-menubar.c:
	* src/nact/nact-preferences.ui:
	* src/nact/nact-schemes-list.c:
	* src/nact/nact-tree-model-dnd.c:
	* src/nact/nautilus-actions-config-tool.ui: Now requires Gtk 2.20.

	* tools/release-tarball.sh: Automatically installs manuals on the website
	when releasing a new stable version.

2011-12-09 Pierre Wieser <pwieser@trychlos.org>

	* tools/release-tarball.sh: Take _build builddir into account.

	* configure.ac: Post release bump version.

	* NEWS:
	* TODO: Update before release.

	* src/core/na-gconf-migration.c (na_gconf_migration_run):
	Run verbosely.

	* src/utils/na-gconf2key.sh.in: Fix unset variable.

	* src/nact/nact-match-list.c (insert_new_row):
	New rows now default to be 'matched'.

	* src/core/na-updater.c (na_updater_delete_item):
	Do not try to remove from the backend an item which has never been written.

	* src/nact/nact-menubar-file.c:
	Fix typo in translatable message.
	(nact_menubar_file_save_items): Reinitialize messages pointer.

	* src/nact/nact-tree-ieditable.c (add_to_deleted_rec):
	Only count as deleted items which were read from the backend.
	Compute level zero status.

	* src/core/na-importer-ask.c (na_importer_ask_user):
	* src/core/na-settings.h:
	Change import default mode and export default format to 'Ask'.

	* src/io-xml/naxml-writer.c
	(write_data_schema_v2, write_data_dump):
	String and uint lists have the GConf format (between square brackets).
